INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/elm")
# Locate generated source.
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

FILE(GLOB elm_test_SOURCES "*.cpp")

ADD_EXECUTABLE(swirly_elm_test ${elm_test_SOURCES})
TARGET_LINK_LIBRARIES(swirly_elm_test elm_shared)

ADD_CUSTOM_COMMAND(
  DEPENDS ${elm_test_SOURCES}
  COMMAND grep -h "^SWIRLY_TEST_CASE" ${elm_test_SOURCES} >${CMAKE_CURRENT_BINARY_DIR}/TestCases.txt
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/TestCases.txt
)

ADD_FILE_DEPENDENCIES(Main.cpp ${CMAKE_CURRENT_BINARY_DIR}/TestCases.txt)

EXECUTE_PROCESS(COMMAND grep -h "^SWIRLY_TEST_CASE" ${elm_test_SOURCES}
  COMMAND sed "s/SWIRLY_TEST_CASE(\\(.*\\))/\\1/"
  OUTPUT_STRIP_TRAILING_WHITESPACE
  OUTPUT_VARIABLE TEST_CASES
)

STRING(REGEX REPLACE "(\r?\n)" ";" TEST_CASES ${TEST_CASES})

FOREACH(name ${TEST_CASES})
  MESSAGE(STATUS "SWIRLY_TEST_CASE(${name})")
  ADD_TEST(${name} ${EXECUTABLE_OUTPUT_PATH}/swirly_elm_test ${name})
ENDFOREACH()
